#   PROCESS THAT IS TIME SENSITIVE, UNMONITORED, OR
#   PERSISTENCE CRITICAL. DO NOT USE THIS SOFTWARE WITHOUT
#   ANOTHER METHOD iOR RUNNING THE PROCESS YOU WISH TO
#   AUTOMATE WITH Net::FullAuto. DO NOT USE IN/FOR A PROCESS
#   WHERE FAILURE OF "ANY KIND" IS UNACCEPTABLE.
#
################################################################


2011-09-15  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9971 released.

        * Completed work on fa --defaults functionality.


2011-09-13  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9970 released.

        * More work on fa --defaults functionality.


2011-09-11  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9969 released.

        * Fixed Solaris login flow when wrong password is entered.


2011-09-10  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9968 released.

        * Completed a significant portion of --set funtionality.

        * Fixed login flow when wrong password is entered.

        * Significantly improved performance of fa -V.


2011-09-02  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9967 released.

        * Added logic for more --set features such as 'delete'.


2011-08-27  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9966 released.

        * Added logic for --set argument, 'Define New Module Set'
          is now working.


2011-08-24  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9965 released.

        * Added logic for --set argument.


2011-08-22  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9964 released.

        * Makefile.PL fix.


2011-08-22  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9963 released.

        * Makefile.PL fix and change default to Setuid.


2011-08-20  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.9962 released.