@@ -45,6 +45,16 @@
 ################################################################
 
 
+2011-09-16  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
+
+        * Version 0.9972 released.
+
+        * Fix for fa --default functionality
+
+        * Fixed an intermittant error when parsing command
+          output from Solaris.
+
+
 2011-09-15  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
 
         * Version 0.9971 released.
